# fishpi-rust-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/.vitepress/: config.js
src/: lib.rs
src/api/: article.rs  breezemoon.rs  chat.rs  chatroom.rs  comment.rs  emoji.rs  finger.rs  mod.rs  notice.rs  reaction.rs  redpacket.rs  user.rs  ws.rs
src/model/: article.rs  breezemoon.rs  chat.rs  chatroom.rs  emoji.rs  finger.rs  misc.rs  mod.rs  notice.rs  reaction.rs  redpacket.rs  user.rs
src/utils/: error.rs  mod.rs
