[package]
name = "fishpi-sdk"
version = "0.1.5"
edition = "2024"
authors = ["KwdeTfpv"]
description = "A Rust SDK for interacting with the FishPi community API"
license = "MIT"
repository = "https://github.com/KwdeTfpv/fishpi-rust-sdk"
homepage = "https://github.com/KwdeTfpv/fishpi-rust-sdk"
keywords = ["fishpiapi", "fishpisdk", "fishpi", "fishpi-community"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
lazy_static = "1.5.0"
md5 = "0.8.0"
reqwest = { version = "0.12.28", features = ["json","rustls-tls","multipart"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"]}
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"]}
tokio-util = "0.7.17"
url = "2.5.7"
